[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
url = { workspace = true }

base64 = { version = "0.21" }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.8" }
webauthn-rs-core = { version = "0.4" }
authenticator = { version = "0.4.0-alpha.24", default-features = false, features = ["crypto_openssl"] }
passkey = { version = "0.2" }
ctap-hid-fido2 = { version = "3" }
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
rpassword = { version = "7" }
serde_cbor = { version = "0.10" }