[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
url = { version = "2" }
uuid = { version = "1.6.1", features = ["v4"] }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower = { version = "0.4" }
tower-sessions = { version = "0.8" }